welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: Missing closing brace `}' assumed here
override def run() 
^PatternPicture:2: error: expected start of definition
override def run() 
         ^PatternPicture:3: error: expected class or object definition
{
^